reverted back to non-variable based notation by adding output space

--- a/preamble.tex
+++ b/preamble.tex
@@ -52,7 +52,7 @@
 \def\avoidg{\mathit{AvoidGlob}}
 \def\init{\mathit{Init}}
 \def\track{\mathit{track}}
-
+\def\proj{\mathbf{proj}}
 
 % environments
 \newtheorem{subproblem}{Subproblem}
